    dhclient-script support stateless DHCPv6 (closes: #632888) 
  * debian/dhclient-script.linux: fix regression for MTU <= 576 handling
    (closes: #638267)
  * Apply patch from Peter Marschall to split the rfc3442-classless-routes hook
    into a Linux and a kFreeBSD variant, so that the Linux one can use iproute
    (closes: #630519)
  * debian/isc-dhcp-server.postinst: apply patch from Peter Marshall to
    document new variables in /etc/default/isc-dhcp-server

 -- Andrew Pollock <apollock@debian.org>  Sat, 27 Aug 2011 13:14:05 -0700

isc-dhcp (4.1.1-P1-18) unstable; urgency=low

  * debian/control: fix short description for dhcp3-client package
  * debian/rfc3442-classless-routes: convert to using iproute (closes: #630519)

 -- Andrew Pollock <apollock@debian.org>  Sat, 18 Jun 2011 10:07:16 -0700

isc-dhcp (4.1.1-P1-17) unstable; urgency=low

  * Incorporate and acknowledge NMU
  * Apply a multitude of patches from Peter Marschall (closes: #609408)
    - fix domain_name in domain_search check in dhclient-script 
      (closes: #567141)
    - fix indentation in dhclient-script to improve readability
    - remove bashisms from dhclient-script
    - fix setting of hostname in dhclient-script
    - remove bashisms from rfc3442-classless-routes hook
    - check for $new_domain_search in dhclient-script
    - synchronize the Linux dhclient-script more with the kFreeBSD one
    - general readability improvements to dhclient-script
    - add DHCPv6 support to the Linux dhclient-script (closes: #591589)
    - expand the variables reported by the debug hooks
    - remove unused variables from dhclient-script
    - convert the Linux dhclient-script to use iproute2 (closes: #275653)
  * debian/control: bumped Standards-Version (no changes)

 -- Andrew Pollock <apollock@debian.org>  Wed, 18 May 2011 23:02:44 -0700

isc-dhcp (4.1.1-P1-16.1) unstable; urgency=high

  * Non-maintainer upload.
  * Fix cve-2011-0997: remote code execution vulnerability in dhclient