@@ -15,10 +15,16 @@ isc-dhcp (4.2.2-1) unstable; urgency=low
   * Apply patch from Peter Marschall to split the rfc3442-classless-routes hook
     into a Linux and a kFreeBSD variant, so that the Linux one can use iproute
     (closes: #630519)
-  * debian/isc-dhcp-server.postinst: apply patch from Peter Marshall to
+  * debian/isc-dhcp-server.postinst: apply patch from Peter Marschall to
     document new variables in /etc/default/isc-dhcp-server
+  * debian/isc-dhcp-server.init.d: apply patch from Peter Marschall to
+    - make the name of the default file configurable
+    - make the name of the server configuration file configurable (closes:
+      #590158, #565650)
+    - allow passing additional options to dhcpd (closes: #613734)
+    - read PID from config file
 
- -- Andrew Pollock <apollock@debian.org>  Sat, 27 Aug 2011 13:14:05 -0700
+ -- Andrew Pollock <apollock@debian.org>  Sat, 27 Aug 2011 13:26:35 -0700
 
 isc-dhcp (4.1.1-P1-18) unstable; urgency=low
 
